fix: 글로벌 css body의 overflow 속성을 제거하여 전체 페이지 뷰포트 sticky 기능 안정화

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,8 +23,6 @@ body {
     background-color: var(--bg-body);
     color: var(--text-dark);
     min-width: 1200px;
-    overflow-x: auto;
-    overflow-y: scroll !important;
 }
 ul, li { list-style: none; }
 a { text-decoration: none; color: inherit; }
